# marketplace_system

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  f.sh  pyproject.toml  requirements.txt  run_airflow.sh  run_tests.sh  valut_secrets.sh
dags/: fetch_active_and_stats_dag.py  fetch_active_and_stats_dag.py.py  fetch_orders_daily_dag.py  fetch_validated_api_dag.py
scripts/: debug_dag_fetch_keyword_stats.py  debug_secrets.py
src/api_client/: base.py  generic.py
src/config/: endpoints.py  settings.py
src/db/: base.py  postgres.py
src/integration/: base.py
src/loaders/: base.py  postgres_keyword_stats.py  postgres_orders.py  postgres_sales_funnel.py
src/models/: keyword_stat.py
src/operators/: api_fetch.py  fetch_active_adverts.py  fetch_active_adverts_op.py  load_to_db.py  transform.py
src/schemas/api_schemas/: active_adverts.py  orders.py  sales_funnel.py  stats_keywords.py
src/tables/: keyword_stat.py  orders.py  sales_funnel.py
src/transformers/: base.py  keyword_stat.py  keyword_stats.py  orders.py  sales_funnel.py
tests/: conftest.py
tests/integrations/: test_api_integration.py
tests/unit/: test_api_fetch_operator.py  test_endpoints.py  test_fetch_active_adverts.py  test_generic_api_client.py  test_generic_api_client_extra.py  test_keyword_stats_transformer.py  test_load_to_db_operator.py  test_loaders.py  test_schemas.py  test_settings.py  test_transform_operator.py  test_transformers_additional.py
vault/: start_vault.sh  write_secrets.sh.example
